# barcode_to_position

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
config/: barcode_to_real_positions.yaml
launch/: barcode_to_position.launch
src/barcode_to_position/: barcode_to_position.py
src/robotnik_barcode_to_position/: barcode_to_position.py  barcode_to_position_node.py
