<?xml version="1.0"?>
<package format="2">
  <name>robotnik_barcode_to_position</name>
  <version>0.1.0</version>
  <description>The robotnik_barcode_to_position package, based on RComponent structure. This node allows to get the real position of the robot from a barcode scanner.</description>

  <maintainer email="jgomez@robotnik.es">Jose Gomez</maintainer>

  <author email="jgomez@robotnik.es">Jose Gomez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
